--- a/scss/content/_footer.scss
+++ b/scss/content/_footer.scss
@@ -50,13 +50,13 @@
 		padding: 0.5em 1em;
 	}
 
-	.row > * {
+	.socialMediaContainer .row > * {
 		padding: $gutter * 1.5;
 		padding-left: 0;
 		padding-top: 0;
 		padding-right: $gutter * 0.75;
 	}
-	.row > .col-6:nth-child(2) {
+	.socialMediaContainer .row > .col-6:nth-child(2) {
 		padding-left: $gutter * 0.75;
 		padding-right: 0;
 	}
